--- a/src/main/resources/static/ejemplo1.html
+++ b/src/main/resources/static/ejemplo1.html
@@ -10,7 +10,7 @@
 
         <div>
             <a href="ejemplo5.html">Atras</a>
-            <a href="index.html">Home</a>
+            <a href="index_2.html">Home</a>
             <a href="ejemplo2.html">Siguiente</a>
         </div>
 
