--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -11,7 +11,7 @@
 
         <div>
             <a href="ejemplo4.html">Atras</a>
-            <a href="index.html">Home</a>
+            <a href="index_2.html">Home</a>
             <a href="ejemplo1.html">Siguiente</a>
         </div>
 
